# ctptrader

./: .project  .pydevproject  README.md  build.bat  subst_l.bat
C_porting_CTP/: gen_c_code.py
C_porting_CTP/include/CCTPApi/: LCThostFtdcMdApi.h  LCThostFtdcTraderApi.h  common_macro.h  ctp_cmessage.h
C_porting_CTP/include/Common/: Base.h
C_porting_CTP/include/Indicator/: indicator.h
C_porting_CTP/include/StrategyBase/: ITraderProxy.h  hft_strategy.h  strategy.h  strategy_defs.h  strategy_macros.h
C_porting_CTP/include/Utils/: DateTime.h  Log.h  TimeType.h  base_service.h  cpu_affinity_helper.h  dll_loader.h  log_info.pb.h  log_service.h  ring_queue.h
C_porting_CTP/src/Monitor/: Monitor.sln
C_porting_CTP/src/Monitor/ConsoleLogReceiver/: ConsoleLogReceiver.csproj  Program.cs  packages.config
C_porting_CTP/src/Monitor/ConsoleLogReceiver/Properties/: AssemblyInfo.cs
C_porting_CTP/src/Monitor/MarketMonitor/: ConfigFile.cs  MainGUI.Designer.cs  MainGUI.cs  MarketMonitor.csproj  Program.cs  packages.config
C_porting_CTP/src/Monitor/MarketMonitor/Components/: LadderView.Designer.cs  LadderView.cs  LadderView.resx  MarketDataView.Designer.cs  MarketDataView.cs  MarketDataView.resx
C_porting_CTP/src/Monitor/MarketMonitor/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
C_porting_CTP/src/Monitor/MarketMonitorWpf/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  MarketMonitorWpf.csproj
C_porting_CTP/src/Monitor/MarketMonitorWpf/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
C_porting_CTP/src/Monitor/Msg_def/: LogInfo.cs  LogInfoCsharp.cs  MarketData.cs  MarketDataCsharp.cs
C_porting_CTP/src/Platform/: CMakeLists.txt
C_porting_CTP/src/Platform/CCTPApiImpl/: CMakeLists.txt  LCThostFtdcMdApi.cxx  LCThostFtdcMdApiImpl.cxx  LCThostFtdcMdApiImpl.hpp  LCThostFtdcTraderApi.cxx  LCThostFtdcTraderApiImpl.cxx  LCThostFtdcTraderApiImpl.hpp
C_porting_CTP/src/Platform/Indicator/: CMakeLists.txt  indicator.cpp
C_porting_CTP/src/Platform/StrategyBase/: CMakeLists.txt  hft_strategy.cpp
C_porting_CTP/src/Platform/TestOrderRtnTime/: CMakeLists.txt  TestOrderRtnTime.cpp  TestOrderRtnTime.h
C_porting_CTP/src/Platform/TradingSystem/: CMakeLists.txt  ITrader.h  LcTraderProxy.cpp  LcTraderProxy.h  global_variables.h  lcts_defs.h  lctslog.h  main.cpp  pricing_source.h  recordable.h  userdefined_message.h
C_porting_CTP/src/Platform/TradingSystem/lcts/: market_data.pb.cc  market_data.pb.h
C_porting_CTP/src/Platform/TradingSystem/manager/: data_mgr.cpp  data_mgr.h  dll_manager.cpp  dll_manager.h  memory_mgr.cpp  memory_mgr.h  order_mgr.cpp  order_mgr.h  position_mgr.cpp  position_mgr.h
C_porting_CTP/src/Platform/TradingSystem/queue/: fifo_hpq.cc  fifo_hpq.h  queue_helper.cpp  queue_helper.h
C_porting_CTP/src/Platform/TradingSystem/service/: md_service.cpp  md_service.h
C_porting_CTP/src/Platform/TradingSystem/worker/: marketdataworker.cpp  marketdataworker.h  omsworker.cpp  omsworker.h  queryworker.cpp  queryworker.h  worker.cpp  worker.h
C_porting_CTP/src/Platform/TradingSystem/wrapper/: AbsWrapper.cpp  AbsWrapper.h  MDWrapper.h  MdWrapper.cpp  TraderWrapper.cpp  TraderWrapper.h
C_porting_CTP/src/Platform/Utils/: CMakeLists.txt  DateTime.c  Log.c  TimeType.c  base_service.cpp  cpu_affinity_helper.c  dll_loader.cpp  log_info.pb.cc  log_service.cpp
C_porting_CTP/src/Protos/: protogen_all.bat
C_porting_CTP/src/Protos/lcts/: log_info.proto  log_info_csharp.proto  market_data.proto  market_data_csharp.proto
C_porting_CTP/src/Strategy/: CMakeLists.txt
C_porting_CTP/src/Strategy/BidOrderStrategy/: CMakeLists.txt  big_order_strategy.cpp  big_order_strategy.h
cmake/: boost_common.cmake  common.cmake  qt5.cmake
docs/: Makefile  make.bat
docs/source/: architecture.rst  bak.rst  conf.py  development.rst  index.rst  introduction.rst  pre-development.rst  update-libs.rst
src/: Makefile  ThostFtdcUserApiStruct.h  UserApiType.py  generate_struct.py  generate_wrapper.py  simpleTest.py
src/inc/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h
